List work on Work Item Tracking and Work Item Tracking Process

--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
@@ -50,6 +50,9 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="referenceName" />
+            <dxg:GridColumn FieldName="attributes" />
+            <dxg:GridColumn FieldName="url" />
         </dxg:GridControl>
 
     </Grid>
