--- a/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
@@ -62,19 +62,18 @@
 
                 <dxdo:LayoutGroup Orientation="Horizontal">
 
-                    <dxdo:LayoutGroup Name="lg_Body_dlm_lg" Orientation="Vertical">
-                        <dxdo:LayoutPanel
-                            x:Name="lp_LeftStuff"
-                            Caption="Collections"
+                    <dxdo:LayoutGroup Name="lg_Body_dlm_lg" Orientation="Vertical" >
+
+                        <dxdo:LayoutPanel Caption="Collections"                     
                             ItemHeight="100">
-                            <dxlc:LayoutGroup Header="Collections">
+                            <dxlc:LayoutGroup >
                                 <Grid>
                                     <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.CollectionMainRegion}" />
                                 </Grid>
                             </dxlc:LayoutGroup>
                         </dxdo:LayoutPanel>
 
-                        <dxdo:LayoutPanel Caption="Commands" >
+                        <dxdo:LayoutPanel Caption="Commands" VerticalAlignment="Top">
                             <dxlc:LayoutGroup>
                                 <Grid>
                                     <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.CommandRegion}" />
@@ -82,12 +81,8 @@
                             </dxlc:LayoutGroup>
                         </dxdo:LayoutPanel>
 
-                        <dxdo:LayoutPanel
-                            Caption="Output"
-                            VerticalAlignment="Stretch"
-                            Name="lg_Body_dlm_lg_lpRoot">
+                        <dxdo:LayoutPanel Caption="Output">
                             <dxlc:LayoutControl
-                                Background="Transparent"
                                 Orientation="Vertical"
                                 StretchContentVertically="True">
                                 <!-- This makes content stretch to bottom -->
@@ -306,71 +301,92 @@
 
                                     </dxlc:LayoutGroup>
 
-                                    <dxlc:LayoutGroup Header="Work Item Tracking" >
+                                    <dxlc:LayoutGroup Header="Work Item Tracking">
+                                        
+                                        <dxlc:LayoutGroup 
+                                            Orientation="Vertical"  View="Tabs">
+                                            <dxlc:LayoutGroup.GroupBoxStyle>
+                                                <Style TargetType="dxlc:GroupBox">
+                                                    <Setter Property="Background" Value="Transparent" />
+                                                    <Setter Property="BorderBrush" Value="Transparent" />
+                                                    <Setter Property="BorderThickness" Value="0" />
+                                                    <Setter Property="Padding" Value="0" />
+                                                    <Setter Property="TitleVisibility" Value="Collapsed" />
+                                                </Style>
+                                            </dxlc:LayoutGroup.GroupBoxStyle>
 
-                                        <dxlc:LayoutGroup Header="Artifact Link Types">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.ArtifactLinkTypeMainRegion}" />
-                                            </Grid>
+                                            <dxlc:LayoutGroup Header="Artifact Link Types">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.ArtifactLinkTypeMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Fields">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.FieldWITMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Queries">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.QueryMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Tags">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TagMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Templates">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TemplateMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Work Item Icons">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemIconMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Work Item Relation Types">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemRelationTypeMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Work Item Type Categories">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeCategoryMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="States">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.StateWITMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Work Item Types">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeWITMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
+                                            <dxlc:LayoutGroup Header="Work Item Types Fields">
+                                                <Grid>
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypesFieldMainRegion}" />
+                                                </Grid>
+                                            </dxlc:LayoutGroup>
+
                                         </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Fields">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.FieldWITMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Queries">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.QueryMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Tags">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TagMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Templates">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TemplateMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Work Item Icons">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemIconMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Work Item Relation Types">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemRelationTypeMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Work Item Types">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Work Item Type Categories">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeCategoryMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
-                                        <dxlc:LayoutGroup Header="Work Item Types Fields">
-                                            <Grid>
-                                                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypesFieldMainRegion}" />
-                                            </Grid>
-                                        </dxlc:LayoutGroup>
-
+                                        
                                     </dxlc:LayoutGroup>
 
                                     <dxlc:LayoutGroup Header="Work Item Tracking Process">
+                                        
                                         <dxlc:LayoutGroup 
                                             Orientation="Vertical"  View="Tabs">
                                             <dxlc:LayoutGroup.GroupBoxStyle>
@@ -421,13 +437,13 @@
 
                                             <dxlc:LayoutGroup Header="States">
                                                 <Grid>
-                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.StateMainRegion}" />
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.StateWITPMainRegion}" />
                                                 </Grid>
                                             </dxlc:LayoutGroup>
 
                                             <dxlc:LayoutGroup Header="WorkItemTypes">
                                                 <Grid>
-                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeMainRegion}" />
+                                                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeWITPMainRegion}" />
                                                 </Grid>
                                             </dxlc:LayoutGroup>
 
