--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ArtifactLinkTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ArtifactLinkTypeMain.xaml
@@ -49,7 +49,9 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="linkType" />
+            <dxg:GridColumn FieldName="artifactType" />
+            <dxg:GridColumn FieldName="toolType" />
         </dxg:GridControl>
 
     </Grid>
