--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/StateMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/StateMain.xaml
@@ -1,24 +1,24 @@
 ﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.WorkItemTrackingProcess.Presentation.Views.RuleMain"
+    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.StateMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    
+
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
     xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"    
-
-    xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
-    xmlns:local="clr-namespace:AZDORestApiExplorer.WorkItemTrackingProcess.Presentation.Views"
+    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
     
-    xmlns:views="clr-namespace:AZDORestApiExplorer.WorkItemTrackingProcess.Presentation.Views"
-    xmlns:viewModels="clr-namespace:AZDORestApiExplorer.WorkItemTrackingProcess.Presentation.ViewModels"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core"
+    xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
+    xmlns:local="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
+    
+    xmlns:views="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
+    xmlns:viewModels="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.ViewModels"
+
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
@@ -37,26 +37,19 @@
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding Rules.Count}"
+                <TextBlock Text="{Binding States.Count}"
                            Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
 
         <dxg:GridControl Grid.Row="1"
-                    ItemsSource="{Binding Rules.ResultItems}"
-                    SelectedItem="{Binding Rules.SelectedItem}"               
+                    ItemsSource="{Binding States.ResultItems}"
+                    SelectedItem="{Binding States.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
-            <dxg:GridColumn FieldName="friendlyName" />
-            <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="conditions" />
-            <dxg:GridColumn FieldName="actions" />
-            <dxg:GridColumn FieldName="isDisabled" />
-            <dxg:GridColumn FieldName="isSystem" />
-            
+            <dxg:GridColumn FieldName="name" />
         </dxg:GridControl>
 
     </Grid>
