--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/TagMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/TagMain.xaml
@@ -50,6 +50,8 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="url" />
         </dxg:GridControl>
 
     </Grid>
