--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemIconMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemIconMain.xaml
@@ -49,7 +49,8 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="url" />
         </dxg:GridControl>
 
     </Grid>
