--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
@@ -37,19 +37,23 @@
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding WorkItemTypeCategorys.Count}"
+                <TextBlock Text="{Binding WorkItemTypeCategories.Count}"
                            Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
 
         <dxg:GridControl Grid.Row="1"
-                    ItemsSource="{Binding WorkItemTypeCategorys.ResultItems}"
-                    SelectedItem="{Binding WorkItemTypeCategorys.SelectedItem}"               
+                    ItemsSource="{Binding WorkItemTypeCategories.ResultItems}"
+                    SelectedItem="{Binding WorkItemTypeCategories.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="referenceName" />
+            <dxg:GridColumn FieldName="defaultWorkItemType" />
+            <dxg:GridColumn FieldName="workItemTypes" />
+            <dxg:GridColumn FieldName="url" />
         </dxg:GridControl>
 
     </Grid>
