--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
@@ -49,7 +49,20 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="referenceName" />
+            <dxg:GridColumn FieldName="description" />
+            <dxg:GridColumn FieldName="color" />
+            <dxg:GridColumn FieldName="icon" />
+            <dxg:GridColumn FieldName="isDisabled" />
+            <dxg:GridColumn FieldName="xmlForm" />
+            <dxg:GridColumn FieldName="fields" />
+            <dxg:GridColumn FieldName="fieldInstances" />
+            <dxg:GridColumn FieldName="transitions" />
+            <dxg:GridColumn FieldName="states" />
+            <dxg:GridColumn FieldName="url" />
+            
         </dxg:GridControl>
 
     </Grid>
