--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/QueryMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/QueryMain.xaml
@@ -37,19 +37,32 @@
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding Querys.Count}"
+                <TextBlock Text="{Binding Queries.Count}"
                            Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
 
         <dxg:GridControl Grid.Row="1"
-                    ItemsSource="{Binding Querys.ResultItems}"
-                    SelectedItem="{Binding Querys.SelectedItem}"               
+                    ItemsSource="{Binding Queries.ResultItems}"
+                    SelectedItem="{Binding Queries.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="path" />
+            <dxg:GridColumn FieldName="createdDate" />
+            <dxg:GridColumn FieldName="lastModifiedDate" />
+            <dxg:GridColumn FieldName="isFolder" />
+            <dxg:GridColumn FieldName="hasChildren" />
+            <dxg:GridColumn FieldName="isPublic" />
+            <dxg:GridColumn FieldName="_links" />
+            <dxg:GridColumn FieldName="createdBy" />
+            <dxg:GridColumn FieldName="lastModifiedBy" />
+            <dxg:GridColumn FieldName="url" />
+               
         </dxg:GridControl>
 
     </Grid>
