--- a/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
+++ b/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
@@ -20,6 +20,12 @@
     <SolidColorBrush x:Key="FriendMeetingDetailBackground" Color="#F0C040" />
     <SolidColorBrush x:Key="FriendDetailBackground" Color="#F0E040" />
 
+    <SolidColorBrush x:Key="OrganizationColor" Color="Violet" />
+    <SolidColorBrush x:Key="ProcessColor" Color="LightGreen" />
+    <SolidColorBrush x:Key="ProjectColor" Color="LightBlue" />
+    <SolidColorBrush x:Key="TeamColor" Color="LightSalmon" />
+    <SolidColorBrush x:Key="WorkItemTypeColor" Color="#FFA68ADE" />
+
     <Style x:Key="OutlineBorder" TargetType="Border">
         <Setter Property="BorderBrush" Value="Black" />
         <Setter Property="BorderThickness" Value="1" />
